--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,12 @@
 # QMK-specific
 api_data/v1
 quantum/version.h
-*.bin
+#*.bin
 *.eep
-*.hex
+#*.hex
 *.qmk
 *.uf2
+.lnk
 
 # Old-style QMK Makefiles
 /keyboards/**/Makefile
